<resources>
    <string name="app_name">Catalogue Movie Ui Ux</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="captain_america">Captain America</string>
    <string name="masukkan_judul_film">masukkan judul film</string>
    <string name="cari">Cari</string>
    <string name="judul_film">Judul Film</string>
    <string name="description">Description</string>
    <string name="tgl_rilis">Tgl Rilis</string>
    <string name="menu_setting">Change Language Settings</string>
    <string name="masukkan_kata">Masukkan Kata</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari1">Cari</string>
    <string name="cinema_ui_ux">Cinema Ui Ux</string>
    <string name="home">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="search">Search</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="judul">Judul</string>
    <string name="overview">Overview</string>
    <string name="favorite">Favorite</string>
</resources>
