<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_coming_soon"
            android:icon="@drawable/ic_movie_filter_black_24dp"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
