<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            android:id="@+id/img_item_photo"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_toRightOf="@id/img_item_photo"
            android:id="@+id/tv_item_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/judul"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:maxLines="2"
            android:ellipsize="end"/>
        <TextView
            android:layout_below="@id/tv_item_judul"
            android:layout_toRightOf="@id/img_item_photo"
            android:id="@+id/tv_item_tgl_rilis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tgl_rilis"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_tgl_rilis"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:id="@+id/tv_item_overview"
            android:text="@string/overview"
            android:maxLines="3"
            android:ellipsize="end"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/img_item_photo"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp">
            <Button
                android:id="@+id/btn_set_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/favorite"
                android:layout_weight="0.5"
                android:layout_alignParentLeft="true"/>
            <Button
                android:id="@+id/btn_set_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/share"
                android:layout_weight="0.5"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>