<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">


    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="80dp"
        android:layout_height="70dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/view_movie_item">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_judul_film"
            android:text="@string/judul_film"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="2dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:elegantTextHeight="true"
            android:maxLines="1"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/tv_description_film"
            android:text="@string/description"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:elegantTextHeight="true"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tgl_rilis"
            android:text="@string/tgl_rilis"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="2dp"
            />
    </LinearLayout>

</LinearLayout>